<resources>
    <string name="app_name">NotesCart</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_my_Subjects">My Subjects</string>
    <string name="menu_notes">Notes</string>
    <string name="menu_question_paper">Question Papers</string>
    <string name="menu_labmanual">Lab Manual</string>
    <string name="e_books">E-Books</string>
    <string name="syllabus">Syllabus</string>
    <string name="contact_us">Contact Us</string>
    <string name="about_us">About Us</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>