<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single" android:id="@+id/group1">

        <item
            android:id="@+id/nav_my_subjects"
            android:icon="@drawable/ic_mysubject"
            android:title="@string/menu_my_Subjects"
            />
    </group>
    <group android:checkableBehavior="single" android:id="@+id/group2">
        <item
            android:id="@+id/nav_notes"
            android:icon="@drawable/ic_notes"
            android:title="@string/menu_notes" />
        <item
            android:id="@+id/nav_question_paper"
            android:icon="@drawable/ic_question"
            android:title="@string/menu_question_paper" />
        <item
            android:id="@+id/nav_lab_manual"
            android:icon="@drawable/ic_labmanual"
            android:title="@string/menu_labmanual" />
        <item
            android:id="@+id/nav_ebooks"
            android:icon="@drawable/ic_ebook"
            android:title="@string/e_books" />
        <item
            android:id="@+id/nav_syllabus"
            android:icon="@drawable/ic_syllabus"
            android:title="@string/syllabus" />
    </group>
    <group android:checkableBehavior="single" android:id="@+id/group3"  >
        <item
            android:id="@+id/nav_contact_us"
            android:icon="@drawable/ic_contactus"
            android:title="@string/contact_us" />
        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_aboutus"
            android:title="@string/about_us" />
    </group>
</menu>